--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "fast-json-patch": "^2.0.6",
     "jsonwebtoken": "^8.2.1"
   },
   "devDependencies": {
