--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "fast-json-patch": "^2.0.6",
-    "jsonwebtoken": "^8.2.1"
+    "jsonwebtoken": "^8.2.1",
+    "sharp": "^0.20.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
