--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "A backend task from hackerbay",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --recursive || true",
+    "test": "nyc mocha --recursive || true",
     "start": "node server.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Bobslegend61/hackerbay-backend-task.git"
   },
   "author": "Alabi",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Bobslegend61/hackerbay-backend-task/issues"
   },
@@ -29,6 +30,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.1.0",
+    "nyc": "^11.7.1",
     "request": "^2.85.0",
     "winston": "^2.4.1"
   }
